# gtaf-sdk-py

./: .gitignore  LICENSE  README.md  RELEASE.md  SECURITY.md  VERSIONING.md  pyproject.toml
.github/workflows/: ci.yml
examples/: agent_runtime_integration.py
gtaf_sdk/: actions.py  artifacts.py  enforcement.py  exceptions.py  integration_exceptions.py  models.py  telemetry.py  validation.py
tests/: test_actions.py  test_artifacts_loader.py  test_enforce_from_files.py  test_import.py  test_models.py  test_telemetry_hooks.py  test_validation.py
tests/fixtures/artifacts_loader/drc_invalid_json/: drc.json
tests/fixtures/artifacts_loader/drc_invalid_structure/: drc.json
tests/fixtures/artifacts_loader/duplicate_cross_category/: drc.json
tests/fixtures/artifacts_loader/duplicate_cross_category/artifacts/dr/: X-001.json
tests/fixtures/artifacts_loader/duplicate_within_category/: drc.json
tests/fixtures/artifacts_loader/duplicate_within_category/artifacts/dr/: DR-001.json
tests/fixtures/artifacts_loader/duplicate_within_category/artifacts/sb/: SB-002.json
tests/fixtures/artifacts_loader/happy/: drc.json
tests/fixtures/artifacts_loader/happy/artifacts/dr/: DR-001.json
tests/fixtures/artifacts_loader/happy/artifacts/rb/: RB-001.json
tests/fixtures/artifacts_loader/happy/artifacts/sb/: SB-001.json
tests/fixtures/artifacts_loader/invalid_artifact_json/: drc.json
tests/fixtures/artifacts_loader/invalid_artifact_json/artifacts/dr/: DR-001.json
tests/fixtures/artifacts_loader/missing_artifact/: drc.json
tests/fixtures/artifacts_loader/missing_artifact/artifacts/sb/: SB-001.json
tests/fixtures/artifacts_loader/no_scanning/artifacts/sb/: SB-EXTRA.json
