[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtaf-sdk-py"
version = "0.1.0-alpha.2"
description = "Optional integration layer for gtaf-runtime-py"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

authors = [
  { name = "TNT Intelligence", email = "contact@tnt-intelligence.com" }
]

dependencies = [
  "gtaf-runtime-py",
]

[project.urls]
Homepage = "https://gtaf.tnt-intelligence.com"
Repository = "https://github.com/TNT-Intelligence/gtaf-sdk-py"

[tool.setuptools.packages.find]
where = ["."]
include = ["gtaf_sdk*"]
exclude = ["tests*"]
