[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtaf-sdk"
version = "0.1.1"
description = "Optional integration layer for gtaf-runtime"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"

authors = [
  { name = "TNT Intelligence", email = "contact@tnt-intelligence.com" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "gtaf-runtime>=0.1.0,<0.2.0",
]

[project.urls]
Homepage = "https://gtaf.tnt-intelligence.com"
Repository = "https://github.com/TNT-Intelligence/gtaf-sdk-py"

[tool.setuptools.packages.find]
where = ["."]
include = ["gtaf_sdk*"]
exclude = ["tests*"]
